# raidho

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  cli.py  context.py  council.py  distill.py  loop.py  memory.py  providers.py  tools.py
benchmarks/: autodistill_curve.py  real_task_opus.py  recall_regimes.py  recall_regimes_results.md  token_savings.py
docs/: ARCHITECTURE.md  MEMORY.md  OPENWEBUI.md  PROVIDERS.md  VISUALS.md
evidence/2026-06-11_opus_vs_raidho/: README.md  bench_output.txt  bench_output_path_c.txt  report_path_c.md  reports_both_paths.md
evidence/2026-06-12_autodistill_curve/: README.md  curve_output.txt
integrations/: openwebui_raidho.py
scripts/: generate_visuals.py  owui_autowire.py
tests/: test_bitpack.py  test_context_first.py  test_council_memory.py  test_distill.py  test_feedback.py  test_persistence.py  test_procedure_execution.py  test_review_fixes.py  test_state_memory.py
vsa/: __init__.py  core.py  memory.py  procedure_handlers.py  procedure_runner.py  state_memory.py
