[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Raidho (rune ᚱ — "ride/journey"). Squarely in the dev niche; the GitHub handle
# `raidho` is taken — pick a variant org/handle when pushing, the package name is free.
name = "raidho"
version = "0.0.1"
description = "Coder agent with compositional-episodic VSA memory. Provider-pluggable LLM backend."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Default local embedder (otherwise embed_fn is injected by the caller).
embed = ["sentence-transformers>=2.6"]
# LLM backends (install whichever you need): Claude via the official SDK,
# openai-compatible (DeepSeek etc.) via httpx.
anthropic = ["anthropic>=0.40"]
openai-compat = ["httpx>=0.27"]
dev = ["pytest>=8", "httpx>=0.27"]  # httpx: retry tests patch the real module

[project.scripts]
coder = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["vsa*", "agent*"]
